# Disentangling-the-Milky-Way-using-GMM

./: .gitignore  Figure_1.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  Figure_5.ipynb  Figure_7.ipynb  Instructions.md  README.md  Sample_construction.ipynb  dataset.ipynb  environment.yaml  error_propegation.ipynb  pyproject.toml
data/: data.txt
figures/: IMP__-2[M_H]-1.6.html  IMP_high___-2[M_H]-1.6.html  IMP_low____-2[M_H]-1.6.html  MP1__-1.6[M_H]-1.3.html  MP1_high___-1.6[M_H]-1.3.html  MP1_low____-1.6[M_H]-1.3.html  MP2__-1.3[M_H]-1.0.html  MP2_high___-1.3[M_H]-1.0.html  MP2_low____-1.3[M_H]-1.0.html  VMP__-3[M_H]-2.html  VMP_high___-3[M_H]-2.html  VMP_low____-3[M_H]-2.html
fits/: bic_mp1_high_alpha.json  bic_mp1_low_alpha.json  bic_mp2_low_alpha.json  bic_values_imp.json  bic_values_mp1.json  bic_values_mp2.json  bic_values_vmp.json  bic_vmp_high_alpha.json  gmm_mp1.pkl
models/: bic_imp_high_alpha.json  bic_imp_low_alpha.json  bic_mp1_high_alpha.json  bic_mp1_low_alpha.json  bic_mp2_high_alpha.json  bic_mp2_low_alpha.json  bic_vmp_high_alpha.json  bic_vmp_low_alpha.json  gmm_imp.pkl  gmm_imp_high.pkl  gmm_imp_low.pkl  gmm_mp1.pkl  gmm_mp1_high.pkl  gmm_mp1_low.pkl  gmm_mp2.pkl  gmm_mp2_high.pkl  gmm_mp2_low.pkl  gmm_vmp.pkl  gmm_vmp_high.pkl  gmm_vmp_low.pkl
notebooks/: Figure_1.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  Figure_4_norm.ipynb  Figure_5.ipynb  Figure_6.ipynb  Figure_7.ipynb  Figure_8.ipynb  Figure_9.ipynb  Sample_construction.ipynb  Viswanathan_GMM.ipynb  Viswanathan_interactive.ipynb  dataset.ipynb  error_propegation.ipynb  (+5 more)
(+19 files in other folders)
