[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research_project"
version = "0.1.0"
description = "Disentangling the components of the Milky Way using Gaussian Mixture Modelling with Extreme Deconvolution"
authors = [
  { name = "Raunaq Rai", email = "your-email@example.com" }
]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.setuptools]
package-dir = { "" = "src" }


